--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
         <script src="resources/qgis2web_expressions.js"></script>
 <script src="resources/proj4.js"></script>
         <script>proj4.defs('EPSG:4326','+proj=longlat +datum=WGS84 +no_defs');</script>
-        <script src="./resources/functions.js"></script>
-        <script src="./resources/ol.js"></script>
-        <script src="./resources/ol-layerswitcher.js"></script>
+        <script src="resources/functions.js"></script>
+        <script src="resources/ol.js"></script>
+        <script src="resources/ol-layerswitcher.js"></script>
         <script src="resources/ol-geocoder.js"></script>
         <script src="layers/Top100_13.js"></script><script src="layers/Worst_14.js"></script>
         <script src="styles/Top100_13_style.js"></script><script src="styles/Worst_14_style.js"></script>
-        <script src="./layers/layers.js" type="text/javascript"></script> 
-        <script src="./resources/Autolinker.min.js"></script>
-        <script src="./resources/qgis2web.js"></script>
+        <script src="layers/layers.js" type="text/javascript"></script> 
+        <script src="resources/Autolinker.min.js"></script>
+        <script src="resources/qgis2web.js"></script>
     </body>
 </html>
